--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -740,8 +740,8 @@
 	"block.staticpower.transformer_lumum": "Lumum Transformer",
 	
 	"block.staticpower.inverter": "Inverter",
-	
 	"block.staticpower.rectifier": "Rectifier",
+	"block.staticpower.circuit_breaker": "Circuit Breaker",
 	
 	"block.staticpower.wire_terminal_lv": "LV Wire Terminal",
 	"block.staticpower.wire_terminal_mv": "MV Wire Terminal",
@@ -856,24 +856,24 @@
 	"block.staticpower.ore_nether_ruby": "Nether Ruby Ore",
 	"block.staticpower.ore_nether_sapphire": "Nether Sapphire Ore",
 	
-	"block.staticpower.block_tin": "Tin Block",
-	"block.staticpower.block_zinc": "Zinc Block",
-	"block.staticpower.block_aluminum": "Aluminum Block",
-	"block.staticpower.block_magnesium": "Magnesium Block",
-	"block.staticpower.block_silver": "Silver Block",
-	"block.staticpower.block_brass": "Brass Block",
-	"block.staticpower.block_bronze": "Bronze Block",	
-	"block.staticpower.block_lead": "Lead Block",
-	"block.staticpower.block_platinum": "Platinum Block",
-	"block.staticpower.block_ruby": "Ruby Block",
-	"block.staticpower.block_sapphire": "Sapphire Block",
-	"block.staticpower.block_tungsten": "Tungsten Block",
-	"block.staticpower.block_uranium": "Uranium Block",
-	"block.staticpower.block_redstone_alloy": "Redstony Alloy Block",
-	"block.staticpower.block_inert_infusion": "Inert Infusion Block",
-	"block.staticpower.block_static_metal": "Static Metal Block",
-	"block.staticpower.block_energized_metal": "Energized Metal Block",
-	"block.staticpower.block_lumum_metal": "Lumum Metal Block",
+	"block.staticpower.block_tin": "Block of Tin",
+	"block.staticpower.block_zinc": "Block of Zinc",
+	"block.staticpower.block_aluminum": "Block of Aluminum",
+	"block.staticpower.block_magnesium": "Block of Magnesium",
+	"block.staticpower.block_silver": "Block of Silver",
+	"block.staticpower.block_brass": "Block of Brass",
+	"block.staticpower.block_bronze": "Block of Bronze",	
+	"block.staticpower.block_lead": "Block of Lead",
+	"block.staticpower.block_platinum": "Block of Platinum",
+	"block.staticpower.block_ruby": "Block of Ruby",
+	"block.staticpower.block_sapphire": "Block of Sapphire",
+	"block.staticpower.block_tungsten": "Block of Tungsten",
+	"block.staticpower.block_uranium": "Block of Uranium",
+	"block.staticpower.block_redstone_alloy": "Block of Redstone Alloy",
+	"block.staticpower.block_inert_infusion": "Block of Inert Infusion",
+	"block.staticpower.block_static_metal": "Block of Static Metal",
+	"block.staticpower.block_energized_metal": "Block of Energized Metal",
+	"block.staticpower.block_lumum_metal": "Block of Lumum Metal",
 	
 	"block.staticpower.block_cut_tin": "Cut Tin",
 	"block.staticpower.block_cut_zinc": "Cut Zinc",
