Switching over to using has for material bundles.

--- a/src/main/resources/assets/staticpower/lang/en_us.json
+++ b/src/main/resources/assets/staticpower/lang/en_us.json
@@ -1327,7 +1327,7 @@
 	
 	"gui.staticpower.experience": "%s XP",
 	"gui.staticpower.fertlization": "Fertilization",
-	"gui.staticpower.fertlization_bonus": "Fertilization Bonus: %s",
+	"gui.staticpower.fertlization_chance": "Fertilization Chance",
 	"gui.staticpower.research_menu_key_tooltip": "Press %1$s to view more",
 	"gui.staticpower.research_menu_no_selected_research_key_tooltip": "Press %1$s to select new research!",
 	"gui.staticpower.set_team": "Set Team",
