StaticCore launches! Going to break that into KingLib and StaticCore next

--- a/StaticCore/src/main/resources/assets/staticcore/lang/en_us.json
+++ b/StaticCore/src/main/resources/assets/staticcore/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+	"itemGroup.staticcore.itemgroup": "Static Core",
+	
 	"item.staticcore.research_tier_1": "Research Vol. 1",
 	"item.staticcore.research_tier_2": "Research Vol. 2",
 	"item.staticcore.research_tier_3": "Research Vol. 3",
