--- a/src/staticpower/resources/assets/staticpower/lang/en_us.json
+++ b/src/staticpower/resources/assets/staticpower/lang/en_us.json
@@ -1189,6 +1189,9 @@
 	"gui.staticpower.backpack_mode.locked": "Locked",
 	"gui.staticpower.backpack_mode.reload": "Reload",
 	
+	"gui.staticpower.refinery_status_multiple_controllers": "Multiple controllers detected!",
+	"gui.staticpower.refinery_missing_boiler": "Refinery requires at least one boiler",
+	
 	"entity.staticpower.smeep": "S'Meep",
 	"entity.staticpower.enox": "Enox",
 	"key.categories.staticpower": "Static Power",
