--- a/src/staticcore/resources/assets/staticcore/lang/en_us.json
+++ b/src/staticcore/resources/assets/staticcore/lang/en_us.json
@@ -71,7 +71,7 @@
 	"gui.staticcore.heat_unit": "°C",
 	"gui.staticcore.heat_unit_per_tick": "°C/t",
 	
-	"gui.staticcore.heat_conductivity_unit": "λ",
+	"gui.staticcore.heat_conductivity_unit": "k",
 	
 	"gui.staticcore.voltage.full_name.no_voltage": "No Voltage",
 	"gui.staticcore.voltage.full_name.low_voltage": "Low Voltage",
